--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,20 @@
     <string name="app_name">BusyCodersGuide</string>
     <string name="help">Help</string>
     <string name="about">About</string>
+    <string name="settings">Settings</string>
 
+    <string name="prefdesc">Settings for use of EmPubLite</string>
+    <string name="preftitle">Display and Navigation</string>
+    <string name="lastpositiontitle">Save Last Position</string>
+    <string name="lastpositionsummary">Save the last chapter you were viewing and open up on that chapter when re-opening the app</string>
+    <string name="keepscreenon_summary">Keep the screen powered on while the reader is in the foreground</string>
+    <string name="keepscreenon_title">Keep Screen On</string>
+
+    <string name="hint">...</string>
+    <string name="notes">Notes</string>
+    <string name="delete">Delete</string>
+    <string name="share">Share</string>
+    <string name="download_update">Download Update</string>
+    <string name="update_complete">BusyCodersGuide app updated!</string>
+    <string name="update_desc">Click here to open updated book</string>
 </resources>
